...
        color: '#2F2F2F',
      },
    },
    {
      text: String.correctData,
      onPress: handleCorrectData,
      testID: 'recordReviewCorrectDataButton',
      style: {
        backgroundColor: '#459151',
      },
      textStyle: {
        color: '#fff',
      },
...
