...
      <View style={stylesx.flagCheckOutline} />
    </View> */}
    <View
      testID="homeMiVotoLogoText"
      style={{ marginLeft: getResponsiveSize(6, 8, 10) }}
    >
      <CText testID="homeMiVotoLogoTitle" style={stylesx.logoTitle}>
        Tu Voto Decide
      </CText>
      <CText testID="homeMiVotoLogoSubtitle" style={stylesx.logoSubtitle}>
        Control ciudadano del voto
      </CText>
    </View>
...
        /* Regular Layout: Phones and Tablet Portrait */
        <View style={stylesx.regularContainer}>
          <View style={stylesx.headerRow}>
            <MiVotoLogo />
            <View style={stylesx.headerIcons}>
              <TouchableOpacity
                testID="notificationsButton"
                onPress={handleOpenNotifications}
                style={stylesx.notificationIconButton}
              >
                <Ionicons
                  name={"notifications-outline"}
                  size={getResponsiveSize(24, 28, 32)}
...
                  stylesx.gridDiv1,
                  stylesx.card,
                  { flexDirection: 'row', alignItems: 'center' },
                ]}
                activeOpacity={0.87}
                onPress={menuItems[0].onPress}
                testID="participateButtonRegular">
                {React.createElement(menuItems[0].iconComponent, {
                  name: menuItems[0].icon,
                  size: getResponsiveSize(40, 50, 60),
                  color: '#41A44D',
                  style: { marginRight: getResponsiveSize(6, 8, 10) },
                })}
...
