...
          title: 'No disponible',
          message: 'No encontramos el enlace del NFT para compartir.',
        });
        return;
      }
      const shareOptions = {
        title: 'Compartir mi certificado',
        message: `He obtenido un certificado NFT por participar como testigo electoral. Puedes verlo aqui: ${normalizedCertificateUrl}`,
        url: normalizedCertificateUrl,
        subject: 'Certificado NFT ',
      };

      const result = await Share.share(shareOptions, {
...
  return (
    <CSafeAreaView style={styles.container}>
      <UniversalHeader
        colors={colors}
        onBack={handleBack}
        // title={String.confirmation}
        title="NFT"
        showNotification={false}
      />

      <ScrollView contentContainerStyle={styles.mainContent} bounces={false}>
        {/* Título principal */}
        {normalizedCertificateUrl && (
...
