...
                      </TouchableOpacity>
                    ))}

                    <TouchableOpacity
                      style={stylesx.addNewRecordBtn}
                      onPress={handleTakePhoto}>
                      <CText style={stylesx.addNewRecordText}>Atestiguar</CText>
                    </TouchableOpacity>
                  </View>
                ) : (
                  <>
                    {/* <View style={stylesx.infoAI}>
                    <Ionicons
...
