...
  const actionButtons = [
    ...(certificateUrl
      ? [
          {
            text: 'Ver certificado',
            onPress: handleViewCertificate,
            testID: 'viewCertificateButton',
            style: {
              backgroundColor: colors.primary || '#459151',
              borderWidth: 0,
            },
            textStyle: {
              color: '#fff',
...
