...
        msg: 'No hay huellas ni Face ID registradas. Agrega una en Ajustes del sistema.',
      });
    }

    const ok = await wira.Biometric.biometricLogin(
      biometryType === 'FaceID'
        ? 'Escanea tu rostro'
        : 'Escanea tu huella dactilar',
    );

    if (!ok) {
      return setModal({
        visible: true,
...
