...
  const onOtpChange = text => setOtp(text);
  const finish = async () => {
    if (otp !== newPin) {
      return setModal({
        ...modal,
        visible: true,
        message: 'Los PIN no coinciden',
      });
    }
    try {
      setModal({
        ...modal,
        visible: true,
...
